# IndustryChallenge

./: .gitmodules  pyproject.toml
project/src/ur_foundation_model/: CMakeLists.txt  package.xml
